--- a/CommWebApp/src/main/resources/templates/console.html
+++ b/CommWebApp/src/main/resources/templates/console.html
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org">
 <head>
 <title>Console CommWebApp</title>
 </head>
 <body>
 <h1>CommWebbApp console</h1>
-<a href="/logout">Logout</a>
+
+<form action="/logout" method="post">
+	<input type="hidden" th:name = ${_csrf.parameterName} th:value= "${_csrf.token}"/>
+	<button type = "submit">Logout</button>
+	</form>
+
 </body>
 </html>
