--- a/CommWebApp/src/main/resources/templates/home.html
+++ b/CommWebApp/src/main/resources/templates/home.html
@@ -1,13 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org">
 <head>
-<title>
-WebCommApp Home page
-</title>
+<title>Home CommWebApp</title>
 </head>
 <body>
-<h1>Welcome to WebCommApp</h1>
-<a href="/Logout">Logout</a>
+<h1>Welcome to home page</h1>
+
+<form action="/logout" method="post">
+	<input type="hidden" th:name = ${_csrf.parameterName} th:value= "${_csrf.token}"/>
+	<button type = "submit">Logout</button>
+	</form>
+
 </body>
 </html>
-
 
