--- a/CommWebApp/src/main/resources/templates/login.html
+++ b/CommWebApp/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 	<form action="" method="post">
+	<input type="hidden" th:name = ${_csrf.parameterName} th:value= "${_csrf.token}"/>
 		<fieldset>
 			<legend>Please Login</legend>
 			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
@@ -27,6 +28,7 @@
 			<div>
 				<button type="submit" class="btn">Log in</button>
 			</div>
+			
 		</fieldset>
 	</form>
 
